<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">MDme</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_welcome">WelcomeActivity</string>
    <string name="welcome_title">Welcome</string>
    <string name="welcome_text">Please Login</string>
    <string name="login">Login</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="user_email">Email Address</string>
    <string name="user_password">Password</string>
    <string name="title_activity_logout">LogoutActivity</string>
    <string name="title_activity_profile">ProfileActivity</string>
    <string name="title_activity_update_profile">UpdateProfileActivity</string>
    <string name="first_name">First Name:</string>
    <string name="last_name">Last Name:</string>
    <string name="profile_full_name">Full Name:</string>
    <string name="email">Email:</string>
    <string name="home_phone_number">Home Phone#:</string>
    <string name="work_phone_number">Work Phone#:</string>
    <string name="cell_phone_number">Cell Phone#:</string>
    <string name="edit">Edit</string>
    <string name="update">Update</string>
    <string name="title_activity_profile_camera">ProfileCameraActivity</string>
    <string name="take_picture">Take Picture</string>
    <string name="load">Load</string>
    <string name="title_activity_doctor_index">DoctorIndexActivity</string>
    <string name="title_activity_department_index">DepartmentIndexActivity</string>
    <string name="title_activity_doctor_show">DoctorShowActivity</string>
    <string name="title_activity_appointment_menu">AppointmentMenuActivity</string>
    <string name="title_activity_confirmed_appointments">ConfirmedAppointmentsActivity</string>
    <string name="title_activity_clinics">ClinicsActivity</string>
    <string name="title_activity_clinic">ClinicActivity</string>
    <string name="location">Location</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="title_activity_appointment_show">AppointmentShow</string>
    <string name="appointment_show_date_label">Date: </string>
    <string name="appointment_show_time_label">Time: </string>
    <string name="appointment_show_doctor_label">Doctor: </string>
    <string name="appointment_show_confirmed_label">Confirmed?: </string>
    <string name="title_activity_requested_appointments">Pending Appointments</string>

    <!-- Content Descriptions -->
    <string name="doctor_profile_image_desc">Image of doctor</string>
    <string name="profile_image_desc">Profile image</string>
    <string name="logo_desc">MDme logo</string>
    <string name="camera_button_desc">Take image</string>
    <string name="edit_button_desc">Edit profile</string>
    <string name="title_activity_appointment_create">AppointmentCreateActivity</string>
    <string name="hello_world">Hello world!</string>

</resources>
