<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:orientation="vertical"
        tools:context="com.MDmde.mobile.UpdateProfileActivity">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginRight="24dp">

                <ImageButton
                    android:id="@+id/update_profile_camera_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@android:drawable/ic_menu_camera"
                    android:layout_gravity="center_vertical"
                    android:contentDescription="@string/camera_button_desc"/>

                <Button
                    android:id="@+id/update_profile_browse_image_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/load"
                    android:layout_gravity="center_vertical"/>

            </LinearLayout>

            <ImageView
                android:layout_marginTop="16dp"
                android:layout_gravity="center_horizontal"
                android:layout_width="300px"
                android:layout_height="300px"
                android:id="@+id/edit_profile_image"
                android:layout_marginBottom="32dp"
                android:contentDescription="@string/edit_button_desc"/>


        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="0px"
                android:layout_height="wrap_content"
                android:text="@string/first_name"
                android:layout_weight="2"/>

            <EditText android:id="@+id/first_name_edit"
                android:hint="@string/first_name"
                android:inputType="textPersonName"
                android:layout_weight="5"
                android:layout_width="0px"
                android:layout_height="wrap_content" />
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="0px"
                android:layout_height="wrap_content"
                android:text="@string/last_name"
                android:layout_weight="2"/>

            <EditText android:id="@+id/last_name_edit"
                android:hint="@string/last_name"
                android:inputType="textPersonName"
                android:layout_width="0px"
                android:layout_height="wrap_content"
                android:layout_weight="5"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="0px"
                android:layout_height="wrap_content"
                android:text="@string/email"
                android:layout_weight="2"/>

            <EditText android:id="@+id/email_edit"
                android:inputType="textEmailAddress"
                android:hint="@string/email"
                android:layout_width="0px"
                android:layout_height="wrap_content"
                android:layout_weight="5"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="0px"
                android:layout_height="wrap_content"
                android:text="@string/home_phone_number"
                android:layout_weight="2"/>

            <EditText android:id="@+id/home_phone_edit"
                android:inputType="phone"
                android:hint="@string/home_phone_number"
                android:layout_width="0px"
                android:layout_height="wrap_content"
                android:layout_weight="5"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="0px"
                android:layout_height="wrap_content"
                android:text="@string/work_phone_number"
                android:layout_weight="2"/>

            <EditText android:id="@+id/work_phone_edit"
                android:inputType="phone"
                android:hint="@string/work_phone_number"
                android:layout_width="0px"
                android:layout_height="wrap_content"
                android:layout_weight="5"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="0px"
                android:layout_height="wrap_content"
                android:text="@string/cell_phone_number"
                android:layout_weight="2"/>

            <EditText android:id="@+id/cell_phone_edit"
                android:inputType="phone"
                android:hint="@string/cell_phone_number"
                android:layout_width="0px"
                android:layout_height="wrap_content"
                android:layout_weight="5"/>
        </LinearLayout>

        <Button android:id="@+id/update_profile_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="48dp"
            android:text="@string/update"/>

    </LinearLayout>

</ScrollView>
