<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.MDmde.mobile.AppointmentShowActivity">

    <TextView
        android:id="@+id/appointment_show_clinic_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="24dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_gravity="center_horizontal"
        android:textSize="24sp"/>

    <ImageView
        android:id="@+id/appointment_show_doctor_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        android:layout_gravity="center_horizontal"
        android:contentDescription="@string/doctor_profile_image_desc"/>

    <TableLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:shrinkColumns="1"
        android:stretchColumns="1">

        <TableRow>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:textSize="20sp"
                android:textStyle="bold"
                android:text="@string/appointment_show_date_label"
                />
            <TextView
                android:id="@+id/appointment_show_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="16dp"
                android:textSize="18sp"/>
        </TableRow>

        <TableRow>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="end"
                android:textSize="20sp"
                android:textStyle="bold"
                android:text="@string/appointment_show_time_label"
                />

            <TextView
                android:id="@+id/appointment_show_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="16dp"
                android:textSize="18sp" />
        </TableRow>

        <TableRow>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:textSize="20sp"
                android:textStyle="bold"
                android:text="@string/appointment_show_doctor_label"
                />

            <TextView
                android:id="@+id/appointment_show_doctor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="16dp"
                android:textSize="18sp"/>
        </TableRow>

        <TableRow>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:textSize="20sp"
                android:textStyle="bold"
                android:text="@string/appointment_show_confirmed_label"
                />

            <TextView
                android:id="@+id/appointment_show_confirmed"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="16dp"
                android:textSize="18sp"/>
        </TableRow>
    </TableLayout>

    <TextView
        android:id="@+id/appointment_show_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"/>


</LinearLayout>
